# agentic-sdlc

./: .gitignore  CHANGELOG.md  LICENSE  MANIFESTO.md  README.md  code-review-benchmarks.md
.beads/: issues.jsonl
.claude/: sdlc.local.md
.claude-plugin/: plugin.json
benchmarks/: .gitignore  README.md  pyproject.toml
benchmarks/adapters/: claude-code.sh  copilot-cli.sh
benchmarks/matrix/: default.yml  smoke.yml
benchmarks/prds/weather-transport/: functional-tests.yml  prd-original.md  prd.md
benchmarks/prompts/: spec-template.md  vanilla.md
benchmarks/rubrics/: outcome-rubric.md
benchmarks/runs/bench-2026-03-28-001/implementations/cc-vanilla-sonnet-improved/app/: .env.example  index.html  package.json
benchmarks/runs/bench-2026-03-28-001/implementations/cc-vanilla-sonnet-improved/app/src/context/: AppContext.tsx
benchmarks/runs/bench-2026-03-28-001/implementations/cc-vanilla-sonnet-improved/app/src/hooks/: useTransport.ts  useWeather.ts
benchmarks/runs/bench-2026-03-28-001/implementations/cc-vanilla-sonnet-original/app/: .env.example  index.html  package.json
benchmarks/runs/bench-2026-03-28-001/implementations/cc-vanilla-sonnet-original/app/src/: App.tsx  vite-env.d.ts
benchmarks/runs/bench-2026-03-28-001/implementations/cc-vanilla-sonnet-original/app/src/components/: Header.tsx
benchmarks/src/spec_bench/: __init__.py  app_navigator.py  calibration.py  cli.py  config.py  mock_data.py  report.py  review.py  scoring.py  vision_judge.py
benchmarks/tests/: test_config.py  test_mock_data.py  test_review.py  test_scoring.py  test_vision_judge.py
(+65 files in other folders)
